app/assets/stylesheets/components/appHeader.scss
.appHeader {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 120px;
  width: 100%;
  padding: 0 $padding-main-content;
  box-sizing: border-box;
  font-weight: 200;

  @include center-and-limit-content-width();

  @media (min-width: $width-content-overlap-top-image) {
    height: 130px;
    padding: 0;
  }
}

  .appHeader-brand {
    text-decoration: none;
  }

    .appHeader-brand-subtext {
      margin: 0;
      color: white;
    }

  .appHeader-nav {
    position: relative;
  }

    .appHeader-nav-button {
      height: 30px;
      border: 0;
      padding: 0;
      background-color: inherit;
      display: flex;
      flex-flow: column nowrap;
      justify-content: space-around;

      @media (min-width: $width-show-navigation) {
        display: none;
      }
    }

      .appHeader-nav-button-iconBar {
        display: block;
        width: 26px;
        height: 3px;
        padding: 3px 0;
        border-radius: 1px;
        background-color: white;
        background-clip: content-box;
      }

      .appHeader-nav-button-iconBar:first-child {
        padding-top: 0;
      }

      .appHeader-nav-button-iconBar:last-child {
        padding-bottom: 0;
      }

    .appHeader-nav-list {
      position: absolute;
      background-color: white;
      right: 0;
      margin: 0;
      color: #355B99;
      padding: 12px 30px;
      font-size: 2.0rem;
      font-weight: 400;

      @media (min-width: $width-show-navigation) {
        padding: 0;
        font-weight: 200;
        font-size: inherit;
        background-color: inherit;
        position: static;
        color: white;
      }
    }

      .appHeader-nav-list-item {
        list-style-type: none;
        padding: 10px 0;

        @media (min-width: $width-show-navigation) {
          padding: 10px 10px;
          display: inline-block;
          margin: 0;
        }
      }

        .appHeader-nav-list-item-link {
          color: inherit;
          text-decoration: none;

          &:hover {
            border-bottom: 1px solid;
            border-bottom-color: inherit;
          }
        }

        .appHeader-nav-list-item-link.mod-current-page {
          border-bottom: 1px solid;
          border-bottom-color: inherit;
        }

      .appHeader-nav-list-item.mod-language {
        padding-top: 35px;

        @media (min-width: $width-show-navigation) {
          padding-left: 3px;
          padding-top: 10px;

          &::before {
            content: '|';
          }
        }

        .appHeader-nav-list-item-link {
          @media (min-width: $width-show-navigation) {
            margin-left: 10px;
          }
        }
      }

    .appHeader-nav-list.is-hidden-on-mobile {
      @media (max-width: $width-show-navigation + 1) {
        display: none;
      }
    }

